# agen-ai-autogen-prj1

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  gradio_ui.py  main.py
app/agents/: agents.py
app/rag/: rag_engine.py
app/utils/: document_processor.py  health.py  logging_config.py  metrics.py
